build/generated/EmbXParser.cpp

// Generated from C:/projects/embx/grammar/EmbX.g4 by ANTLR 4.13.2


#include "EmbXVisitor.h"

#include "EmbXParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct EmbXParserStaticData final {
  EmbXParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  EmbXParserStaticData(const EmbXParserStaticData&) = delete;
  EmbXParserStaticData(EmbXParserStaticData&&) = delete;
  EmbXParserStaticData& operator=(const EmbXParserStaticData&) = delete;
  EmbXParserStaticData& operator=(EmbXParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag embxParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<EmbXParserStaticData> embxParserStaticData = nullptr;

void embxParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (embxParserStaticData != nullptr) {
    return;
  }
#else
  assert(embxParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<EmbXParserStaticData>(
    std::vector<std::string>{
      "module", "namespaceDecl", "importDecl", "qualifiedName", "item", 
      "endianDirective", "constDecl", "computedDecl", "enumDecl", "enumItem", 
      "typeAlias", "structDecl", "requiresDecl", "member", "virtualDecl", 
      "aliasDecl", "fieldDecl", "fieldModifier", "transform", "bitsBlock", 
      "bitField", "conditionalDecl", "variantDecl", "variantCase", "variantDefault", 
      "variantBody", "blockDecl", "atDecl", "alignDecl", "callbackDecl", 
      "parameterDecl", "callbackUse", "argList", "docComment", "attributeDecl", 
      "attributeType", "attributes", "attributeEntry", "typeRef", "terminatedSequenceSuffix", 
      "typeSuffix", "baseType", "primitive", "expr", "primary", "literal", 
      "endian"
    },
    std::vector<std::string>{
      "", "';'", "'='", "':'", "'{'", "','", "'}'", "'['", "']'", "'('", 
      "')'", "'-'", "'/'", "'%'", "'+'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'&&'", "'||'", "'*'", "'until'", "'max'", "'::'", 
      "'@'", "'attribute'", "'requires'", "'endian'", "'const'", "'computed'", 
      "'enum'", "'struct'", "'type'", "'bits'", "'variant'", "'by'", "'default'", 
      "'block'", "'at'", "'align'", "'callback'", "'param'", "'if'", "'else'", 
      "'let'", "'namespace'", "'import'", "'as'", "'alias'", "'transform'", 
      "'$next'", "'true'", "'false'", "'$size_in_bytes'", "'$min_size_in_bytes'", 
      "'$max_size_in_bytes'", "'little'", "'big'", "'native'", "'u8'", "'i8'", 
      "'u16'", "'i16'", "'u32'", "'i32'", "'u64'", "'i64'", "'f32'", "'f64'", 
      "'bytes'", "'string'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "STAR", "UNTIL", "MAX", "SCOPE", "AT", "ATTRIBUTE", 
      "REQUIRES", "ENDIAN", "CONST", "COMPUTED", "ENUM", "STRUCT", "TYPE", 
      "BITS", "VARIANT", "BY", "DEFAULT", "BLOCK", "ATCALL", "ALIGN", "CALLBACK", 
      "PARAM", "IF", "ELSE", "LET", "NAMESPACE", "IMPORT", "AS", "ALIAS", 
      "TRANSFORM", "NEXT", "TRUE", "FALSE", "SIZE_IN_BYTES", "MIN_SIZE_IN_BYTES", 
      "MAX_SIZE_IN_BYTES", "LITTLE", "BIG", "NATIVE", "U8", "I8", "U16", 
      "I16", "U32", "I32", "U64", "I64", "F32", "F64", "BYTES", "STRINGTYPE", 
      "ID", "HEX", "FLOAT", "INT", "STRING", "WS", "DOC_COMMENT", "LINECOMMENT", 
      "BLOCKCOMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  embxParserStaticData = std::move(staticData);
}

}

EmbXParser::EmbXParser(TokenStream *input) : EmbXParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

EmbXParser::EmbXParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  EmbXParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *embxParserStaticData->atn, embxParserStaticData->decisionToDFA, embxParserStaticData->sharedContextCache, options);
}

EmbXParser::~EmbXParser() {
  delete _interpreter;
}

const atn::ATN& EmbXParser::getATN() const {
  return *embxParserStaticData->atn;
}

std::string EmbXParser::getGrammarFileName() const {
  return "EmbX.g4";
}

const std::vector<std::string>& EmbXParser::getRuleNames() const {
  return embxParserStaticData->ruleNames;
}

const dfa::Vocabulary& EmbXParser::getVocabulary() const {
  return embxParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView EmbXParser::getSerializedATN() const {
  return embxParserStaticData->serializedATN;
}


//----------------- ModuleContext ------------------------------------------------------------------

EmbXParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::ModuleContext::EOF() {
  return getToken(EmbXParser::EOF, 0);
}

tree::TerminalNode* EmbXParser::ModuleContext::DOC_COMMENT() {
  return getToken(EmbXParser::DOC_COMMENT, 0);
}

EmbXParser::NamespaceDeclContext* EmbXParser::ModuleContext::namespaceDecl() {
  return getRuleContext<EmbXParser::NamespaceDeclContext>(0);
}

std::vector<EmbXParser::ImportDeclContext *> EmbXParser::ModuleContext::importDecl() {
  return getRuleContexts<EmbXParser::ImportDeclContext>();
}

EmbXParser::ImportDeclContext* EmbXParser::ModuleContext::importDecl(size_t i) {
  return getRuleContext<EmbXParser::ImportDeclContext>(i);
}

std::vector<EmbXParser::ItemContext *> EmbXParser::ModuleContext::item() {
  return getRuleContexts<EmbXParser::ItemContext>();
}

EmbXParser::ItemContext* EmbXParser::ModuleContext::item(size_t i) {
  return getRuleContext<EmbXParser::ItemContext>(i);
}


size_t EmbXParser::ModuleContext::getRuleIndex() const {
  return EmbXParser::RuleModule;
}


std::any EmbXParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::ModuleContext* EmbXParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, EmbXParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(94);
      match(EmbXParser::DOC_COMMENT);
      break;
    }

    default:
      break;
    }
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::NAMESPACE) {
      setState(97);
      namespaceDecl();
    }
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EmbXParser::IMPORT) {
      setState(100);
      importDecl();
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 26455253713024) != 0) || _la == EmbXParser::DOC_COMMENT) {
      setState(106);
      item();
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(112);
    match(EmbXParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamespaceDeclContext ------------------------------------------------------------------

EmbXParser::NamespaceDeclContext::NamespaceDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::NamespaceDeclContext::NAMESPACE() {
  return getToken(EmbXParser::NAMESPACE, 0);
}

EmbXParser::QualifiedNameContext* EmbXParser::NamespaceDeclContext::qualifiedName() {
  return getRuleContext<EmbXParser::QualifiedNameContext>(0);
}


size_t EmbXParser::NamespaceDeclContext::getRuleIndex() const {
  return EmbXParser::RuleNamespaceDecl;
}


std::any EmbXParser::NamespaceDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitNamespaceDecl(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::NamespaceDeclContext* EmbXParser::namespaceDecl() {
  NamespaceDeclContext *_localctx = _tracker.createInstance<NamespaceDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, EmbXParser::RuleNamespaceDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(EmbXParser::NAMESPACE);
    setState(115);
    qualifiedName();
    setState(116);
    match(EmbXParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclContext ------------------------------------------------------------------

EmbXParser::ImportDeclContext::ImportDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::ImportDeclContext::IMPORT() {
  return getToken(EmbXParser::IMPORT, 0);
}

tree::TerminalNode* EmbXParser::ImportDeclContext::STRING() {
  return getToken(EmbXParser::STRING, 0);
}

tree::TerminalNode* EmbXParser::ImportDeclContext::AS() {
  return getToken(EmbXParser::AS, 0);
}

tree::TerminalNode* EmbXParser::ImportDeclContext::ID() {
  return getToken(EmbXParser::ID, 0);
}


size_t EmbXParser::ImportDeclContext::getRuleIndex() const {
  return EmbXParser::RuleImportDecl;
}


std::any EmbXParser::ImportDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitImportDecl(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::ImportDeclContext* EmbXParser::importDecl() {
  ImportDeclContext *_localctx = _tracker.createInstance<ImportDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, EmbXParser::RuleImportDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(EmbXParser::IMPORT);
    setState(119);
    match(EmbXParser::STRING);
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::AS) {
      setState(120);
      match(EmbXParser::AS);
      setState(121);
      match(EmbXParser::ID);
    }
    setState(124);
    match(EmbXParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameContext ------------------------------------------------------------------

EmbXParser::QualifiedNameContext::QualifiedNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EmbXParser::QualifiedNameContext::ID() {
  return getTokens(EmbXParser::ID);
}

tree::TerminalNode* EmbXParser::QualifiedNameContext::ID(size_t i) {
  return getToken(EmbXParser::ID, i);
}

std::vector<tree::TerminalNode *> EmbXParser::QualifiedNameContext::SCOPE() {
  return getTokens(EmbXParser::SCOPE);
}

tree::TerminalNode* EmbXParser::QualifiedNameContext::SCOPE(size_t i) {
  return getToken(EmbXParser::SCOPE, i);
}


size_t EmbXParser::QualifiedNameContext::getRuleIndex() const {
  return EmbXParser::RuleQualifiedName;
}


std::any EmbXParser::QualifiedNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitQualifiedName(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::QualifiedNameContext* EmbXParser::qualifiedName() {
  QualifiedNameContext *_localctx = _tracker.createInstance<QualifiedNameContext>(_ctx, getState());
  enterRule(_localctx, 6, EmbXParser::RuleQualifiedName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(EmbXParser::ID);
    setState(131);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(127);
        match(EmbXParser::SCOPE);
        setState(128);
        match(EmbXParser::ID); 
      }
      setState(133);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ItemContext ------------------------------------------------------------------

EmbXParser::ItemContext::ItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EmbXParser::AttributeDeclContext* EmbXParser::ItemContext::attributeDecl() {
  return getRuleContext<EmbXParser::AttributeDeclContext>(0);
}

EmbXParser::EndianDirectiveContext* EmbXParser::ItemContext::endianDirective() {
  return getRuleContext<EmbXParser::EndianDirectiveContext>(0);
}

EmbXParser::ConstDeclContext* EmbXParser::ItemContext::constDecl() {
  return getRuleContext<EmbXParser::ConstDeclContext>(0);
}

EmbXParser::ComputedDeclContext* EmbXParser::ItemContext::computedDecl() {
  return getRuleContext<EmbXParser::ComputedDeclContext>(0);
}

EmbXParser::EnumDeclContext* EmbXParser::ItemContext::enumDecl() {
  return getRuleContext<EmbXParser::EnumDeclContext>(0);
}

EmbXParser::StructDeclContext* EmbXParser::ItemContext::structDecl() {
  return getRuleContext<EmbXParser::StructDeclContext>(0);
}

EmbXParser::CallbackDeclContext* EmbXParser::ItemContext::callbackDecl() {
  return getRuleContext<EmbXParser::CallbackDeclContext>(0);
}

EmbXParser::ParameterDeclContext* EmbXParser::ItemContext::parameterDecl() {
  return getRuleContext<EmbXParser::ParameterDeclContext>(0);
}

EmbXParser::TypeAliasContext* EmbXParser::ItemContext::typeAlias() {
  return getRuleContext<EmbXParser::TypeAliasContext>(0);
}

EmbXParser::DocCommentContext* EmbXParser::ItemContext::docComment() {
  return getRuleContext<EmbXParser::DocCommentContext>(0);
}


size_t EmbXParser::ItemContext::getRuleIndex() const {
  return EmbXParser::RuleItem;
}


std::any EmbXParser::ItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitItem(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::ItemContext* EmbXParser::item() {
  ItemContext *_localctx = _tracker.createInstance<ItemContext>(_ctx, getState());
  enterRule(_localctx, 8, EmbXParser::RuleItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::DOC_COMMENT) {
      setState(134);
      docComment();
    }
    setState(146);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(137);
      attributeDecl();
      break;
    }

    case 2: {
      setState(138);
      endianDirective();
      break;
    }

    case 3: {
      setState(139);
      constDecl();
      break;
    }

    case 4: {
      setState(140);
      computedDecl();
      break;
    }

    case 5: {
      setState(141);
      enumDecl();
      break;
    }

    case 6: {
      setState(142);
      structDecl();
      break;
    }

    case 7: {
      setState(143);
      callbackDecl();
      break;
    }

    case 8: {
      setState(144);
      parameterDecl();
      break;
    }

    case 9: {
      setState(145);
      typeAlias();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EndianDirectiveContext ------------------------------------------------------------------

EmbXParser::EndianDirectiveContext::EndianDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::EndianDirectiveContext::AT() {
  return getToken(EmbXParser::AT, 0);
}

tree::TerminalNode* EmbXParser::EndianDirectiveContext::ENDIAN() {
  return getToken(EmbXParser::ENDIAN, 0);
}

EmbXParser::EndianContext* EmbXParser::EndianDirectiveContext::endian() {
  return getRuleContext<EmbXParser::EndianContext>(0);
}


size_t EmbXParser::EndianDirectiveContext::getRuleIndex() const {
  return EmbXParser::RuleEndianDirective;
}


std::any EmbXParser::EndianDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitEndianDirective(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::EndianDirectiveContext* EmbXParser::endianDirective() {
  EndianDirectiveContext *_localctx = _tracker.createInstance<EndianDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 10, EmbXParser::RuleEndianDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(EmbXParser::AT);
    setState(149);
    match(EmbXParser::ENDIAN);
    setState(150);
    endian();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

EmbXParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::ConstDeclContext::CONST() {
  return getToken(EmbXParser::CONST, 0);
}

tree::TerminalNode* EmbXParser::ConstDeclContext::ID() {
  return getToken(EmbXParser::ID, 0);
}

EmbXParser::ExprContext* EmbXParser::ConstDeclContext::expr() {
  return getRuleContext<EmbXParser::ExprContext>(0);
}

EmbXParser::AttributesContext* EmbXParser::ConstDeclContext::attributes() {
  return getRuleContext<EmbXParser::AttributesContext>(0);
}


size_t EmbXParser::ConstDeclContext::getRuleIndex() const {
  return EmbXParser::RuleConstDecl;
}


std::any EmbXParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::ConstDeclContext* EmbXParser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, EmbXParser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::T__6) {
      setState(152);
      attributes();
    }
    setState(155);
    match(EmbXParser::CONST);
    setState(156);
    match(EmbXParser::ID);
    setState(157);
    match(EmbXParser::T__1);
    setState(158);
    expr(0);
    setState(159);
    match(EmbXParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComputedDeclContext ------------------------------------------------------------------

EmbXParser::ComputedDeclContext::ComputedDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::ComputedDeclContext::COMPUTED() {
  return getToken(EmbXParser::COMPUTED, 0);
}

tree::TerminalNode* EmbXParser::ComputedDeclContext::ID() {
  return getToken(EmbXParser::ID, 0);
}

EmbXParser::ExprContext* EmbXParser::ComputedDeclContext::expr() {
  return getRuleContext<EmbXParser::ExprContext>(0);
}

EmbXParser::AttributesContext* EmbXParser::ComputedDeclContext::attributes() {
  return getRuleContext<EmbXParser::AttributesContext>(0);
}


size_t EmbXParser::ComputedDeclContext::getRuleIndex() const {
  return EmbXParser::RuleComputedDecl;
}


std::any EmbXParser::ComputedDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitComputedDecl(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::ComputedDeclContext* EmbXParser::computedDecl() {
  ComputedDeclContext *_localctx = _tracker.createInstance<ComputedDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, EmbXParser::RuleComputedDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::T__6) {
      setState(161);
      attributes();
    }
    setState(164);
    match(EmbXParser::COMPUTED);
    setState(165);
    match(EmbXParser::ID);
    setState(166);
    match(EmbXParser::T__1);
    setState(167);
    expr(0);
    setState(168);
    match(EmbXParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumDeclContext ------------------------------------------------------------------

EmbXParser::EnumDeclContext::EnumDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EmbXParser::EnumDeclContext::ENUM() {
  return getToken(EmbXParser::ENUM, 0);
}

tree::TerminalNode* EmbXParser::EnumDeclContext::ID() {
  return getToken(EmbXParser::ID, 0);
}

std::vector<EmbXParser::EnumItemContext *> EmbXParser::EnumDeclContext::enumItem() {
  return getRuleContexts<EmbXParser::EnumItemContext>();
}

EmbXParser::EnumItemContext* EmbXParser::EnumDeclContext::enumItem(size_t i) {
  return getRuleContext<EmbXParser::EnumItemContext>(i);
}

EmbXParser::AttributesContext* EmbXParser::EnumDeclContext::attributes() {
  return getRuleContext<EmbXParser::AttributesContext>(0);
}

EmbXParser::TypeRefContext* EmbXParser::EnumDeclContext::typeRef() {
  return getRuleContext<EmbXParser::TypeRefContext>(0);
}


size_t EmbXParser::EnumDeclContext::getRuleIndex() const {
  return EmbXParser::RuleEnumDecl;
}


std::any EmbXParser::EnumDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EmbXVisitor*>(visitor))
    return parserVisitor->visitEnumDecl(this);
  else
    return visitor->visitChildren(this);
}

EmbXParser::EnumDeclContext* EmbXParser::enumDecl() {
  EnumDeclContext *_localctx = _tracker.createInstance<EnumDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, EmbXParser::RuleEnumDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(171);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EmbXParser::T__6) {
      setState(170);
      attributes();
    }
    setState(173);
    match(EmbXParser::ENUM);
    setState(174);
    match(EmbXParser::ID);
    setState(177);
    _errHandler->sync(this);
